vmmjava/vmm/internal/VmmNative.java

		
		VMMDLL_MAP_MODULE(Pointer p)
		{
			super(p);
			pMap = new VMMDLL_MAP_MODULEENTRY[1];
			read();
			if(dwVersion != VmmNative.VMMDLL_MAP_MODULE_VERSION) { throw new VmmException("Bad Version"); }
			pMap = new VMMDLL_MAP_MODULEENTRY[cMap];
			read();
		}
	}
	
	boolean VMMDLL_Map_GetModuleU(Pointer hVMM, int dwPID, PointerByReference ppModuleMap, int flags);
	boolean VMMDLL_Map_GetModuleFromNameU(Pointer hVMM, int dwPID, String uszModuleName, PointerByReference ppModuleMapEntry, int flags);
	
	
	
	long VMMDLL_ProcessGetProcAddressU(Pointer hVMM, int dwPID, String uszModuleName, String szFunctionName);
	
	
	
	@Structure.FieldOrder({"vaFunction", "dwOrdinal", "oFunctionsArray", "oNamesArray", "_FutureUse1", "uszFunction", "uszForwardedFunction"})
	class VMMDLL_MAP_EATENTRY extends Structure {
		public long vaFunction;
		public int dwOrdinal;
		public int oFunctionsArray;
		public int oNamesArray;
		public int _FutureUse1;
		public String uszFunction;
		public String uszForwardedFunction;
	}
	
	@Structure.FieldOrder({"dwVersion", "dwOrdinalBase", "cNumberOfNames", "cNumberOfFunctions", "cNumberOfForwardedFunctions", "_Reserved1", "vaModuleBase", "vaAddressOfFunctions", "vaAddressOfNames", "pbMultiText", "cbMultiText", "cMap", "pMap"})
	class VMMDLL_MAP_EAT extends Structure {
		public int dwVersion;
		public int dwOrdinalBase;
		public int cNumberOfNames;
		public int cNumberOfFunctions;
		public int cNumberOfForwardedFunctions;
		public int[] _Reserved1 = new int[3];
		public long vaModuleBase;
		public long vaAddressOfFunctions;
		public long vaAddressOfNames;
		public Pointer pbMultiText;
		public int cbMultiText;
		public int cMap;
		public VMMDLL_MAP_EATENTRY[] pMap;
		
		VMMDLL_MAP_EAT(Pointer p)
		{
			super(p);
			pMap = new VMMDLL_MAP_EATENTRY[1];
			read();
			if(dwVersion != VmmNative.VMMDLL_MAP_EAT_VERSION) { throw new VmmException("Bad Version"); }
			pMap = new VMMDLL_MAP_EATENTRY[cMap];
			read();
		}
	}
	
	boolean VMMDLL_Map_GetEATU(Pointer hVMM, int dwPID, String uszModuleName, PointerByReference ppEatMap);
	
	
	
	@Structure.FieldOrder({"vaFunction", "uszFunction", "_FutureUse1", "_FutureUse2", "uszModule", "f32", "wHint", "_Reserved1", "rvaFirstThunk", "rvaOriginalFirstThunk", "rvaNameModule", "rvaNameFunction"})
	class VMMDLL_MAP_IATENTRY extends Structure {
		public long vaFunction;
		public String uszFunction;
		public int _FutureUse1;
		public int _FutureUse2;
		public String uszModule;
		// Thunk
		public boolean f32;
		public short wHint;
		public short _Reserved1;
		public int rvaFirstThunk;
		public int rvaOriginalFirstThunk;
		public int rvaNameModule;
		public int rvaNameFunction;
	}
	
	@Structure.FieldOrder({"dwVersion", "_Reserved1", "vaModuleBase", "pbMultiText", "cbMultiText", "cMap", "pMap"})
	class VMMDLL_MAP_IAT extends Structure {
		public int dwVersion;
		public int[] _Reserved1 = new int[5];
		public long vaModuleBase;
		public Pointer pbMultiText;
		public int cbMultiText;
		public int cMap;
		public VMMDLL_MAP_IATENTRY[] pMap;
		
		VMMDLL_MAP_IAT(Pointer p)
		{
			super(p);
			pMap = new VMMDLL_MAP_IATENTRY[1];
			read();
			if(dwVersion != VmmNative.VMMDLL_MAP_IAT_VERSION) { throw new VmmException("Bad Version"); }
			pMap = new VMMDLL_MAP_IATENTRY[cMap];
			read();
		}
	}
	
	boolean VMMDLL_Map_GetIATU(Pointer hVMM, int dwPID, String uszModuleName, PointerByReference ppIatMap);
	
	
	
	@Structure.FieldOrder({"VirtualAddress", "Size"})
	class IMAGE_DATA_DIRECTORY extends Structure {
		public int VirtualAddress;
		public int Size;
	}
	
	boolean VMMDLL_ProcessGetDirectoriesU(Pointer hVMM, int dwPID, String uszModule, IMAGE_DATA_DIRECTORY[] pData);
	
	
	
	@Structure.FieldOrder({"name", "MiscVirtualSize", "VirtualAddress", "SizeOfRawData", "PointerToRawData", "PointerToRelocations", "PointerToLinenumbers", "NumberOfRelocations", "NumberOfLinenumbers", "Characteristics"})
	class IMAGE_SECTION_HEADER extends Structure {
		public byte[] name = new byte[8];
		public int MiscVirtualSize;
		public int VirtualAddress;
		public int SizeOfRawData;
		public int PointerToRawData;
		public int PointerToRelocations;
		public int PointerToLinenumbers;
		public short NumberOfRelocations;
		public short NumberOfLinenumbers;
		public int Characteristics;
	}
	
	boolean VMMDLL_ProcessGetSectionsU(Pointer hVMM, int dwPID, String uszModule, IMAGE_SECTION_HEADER[] pData, int cData, IntByReference pcData);
	
	
	
	boolean VMMDLL_PdbLoad(Pointer hVMM, int dwPID, long vaModuleBase, byte[] szModuleName);
	boolean VMMDLL_PdbSymbolName(Pointer hVMM, String szModule, long cbSymbolAddressOrOffset, byte[] szModuleName, IntByReference pdwSymbolDisplacement);
	boolean VMMDLL_PdbSymbolAddress(Pointer hVMM, String szModule, String szTypeName, LongByReference pcbTypeSize);
	boolean VMMDLL_PdbTypeSize(Pointer hVMM, String szModule, String szTypeName, IntByReference pcbTypeSize);
	boolean VMMDLL_PdbTypeChildOffset(Pointer hVMM, String szModule, String uszTypeName, String uszTypeChildName, IntByReference pdwSymbolDisplacement);
	
	
	
	@Structure.FieldOrder({"magic", "wVersion", "wSize", "_FutureReserved1", "vaCMHIVE", "vaHBASE_BLOCK", "cbLength", "uszName", "uszNameShort", "uszHiveRootPath", "_FutureReserved"})
	class VMMDLL_REGISTRY_HIVE_INFORMATION extends Structure {
		public long magic;
		public short wVersion;
		public short wSize;
		public byte[] _FutureReserved1 = new byte[0x34];
		public long vaCMHIVE;
		public long vaHBASE_BLOCK;
		public int cbLength;
		public byte[] uszName = new byte[128];
		public byte[] uszNameShort = new byte[32 + 1];
		public byte[] uszHiveRootPath = new byte[MAX_PATH];
		public long[] _FutureReserved = new long[0x10];
	}
	
	boolean VMMDLL_WinReg_HiveList(Pointer hVMM, VMMDLL_REGISTRY_HIVE_INFORMATION[] pHives, int cHives, IntByReference pcHives);
	boolean VMMDLL_WinReg_HiveReadEx(Pointer hVMM, long vaCMHive, int ra, Pointer ptr, int cb, IntByReference pcbReadOpt, long flags);
	boolean VMMDLL_WinReg_HiveWrite(Pointer hVMM, long vaCMHive, int ra, byte[] pb, int cb);
	boolean VMMDLL_WinReg_EnumKeyExU(Pointer hVMM, String uszFullPathKey, int dwIndex, byte[] lpName, IntByReference lpcchName, LongByReference lpftLastWriteTime);
	boolean VMMDLL_WinReg_EnumValueU(Pointer hVMM, String uszFullPathKey, int dwIndex, byte[] lpValueName, IntByReference lpcchValueName, IntByReference lpType, byte[] lpData, IntByReference lpcbData);
	boolean VMMDLL_WinReg_QueryValueExU(Pointer hVMM, String uszFullPathKeyValue, IntByReference lpType, byte[] lpData, IntByReference lpcbData);
}
